@@ -1,0 +1,3 @@
+<h2>Installation</h2>
+<p>Piwam semble déjà être installé... (La connexion à la base de données est correctement configurée)</p>
+<p>Bonne nouvelle ?</p>
